FIX long basket item name display error

--- a/resources/scss/ceres/views/Templates/BasketItemList/_basket-list-item.scss
+++ b/resources/scss/ceres/views/Templates/BasketItemList/_basket-list-item.scss
@@ -89,6 +89,8 @@
 					.item-name {
 						font-weight: 700;
 						font-size: 80%;
+						overflow-wrap: break-word;
+    					word-wrap: break-word;
 					}
 		
 					.item-base-price {
