--- a/resources/views/Customer/Components/Login.twig
+++ b/resources/views/Customer/Components/Login.twig
@@ -32,7 +32,7 @@
                     {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
                 </div>
                 <div :class="{'col-xs-5 col-sm-8 text-sm-right': !modalElement}">
-                    <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium">
+                    <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
                         <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
                         {{ trans("Ceres::Template.login") }}
                     </button>
