ADD logic to cut text in variation selects because of styling issues and show tooltip

--- a/resources/scss/ceres/forms/_select.scss
+++ b/resources/scss/ceres/forms/_select.scss
@@ -23,3 +23,13 @@
 		text-align-last: left;
 	}
 }
+
+.variation-select {
+
+	& label {
+		text-overflow: ellipsis;
+		overflow: hidden;
+		width: 140px;
+		white-space: nowrap;
+	}
+}
