--- a/resources/views/Item/Components/VariationSelect.twig
+++ b/resources/views/Item/Components/VariationSelect.twig
@@ -1,7 +1,7 @@
 <script type="x/template" id="vue-variation-select">
     <div>
-        <div class="col-xs-12 col-md-6 col-lg-4" v-for="(attribute, attributeId) in attributes">
-            <div class="input-unit">
+        <div class="col-xs-12 col-md-6 col-lg-4 variation-select" v-for="(attribute, attributeId) in attributes">
+            <div class="input-unit" ref="labelBoxRef">
                 <select class="custom-select text-gray-dark" v-model="selectedAttributes[attributeId]" @change="onSelectionChange(selectedAttributes[attributeId])">
                         <option :value="null">{{ trans("Ceres::Template.singleItemPleaseSelect") }}</option>
                         <option
@@ -11,7 +11,7 @@
                             ${ attributeValue }
                         </option>
                 </select>
-                <label>${ attribute.name }</label>
+                <label v-tooltip="isTextCut(attribute.name)" data-toggle="tooltip" data-placement="top" :title="attribute.name">${ attribute.name }</label>
             </div>
         </div>
     </div>
