ADD header fixed config key back to use

--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -14,7 +14,7 @@
 {% set currencyFormat = config("Ceres.currency.format") %}
 {% set currencyFormatSelect = config("Ceres.currency.format_selection") %}
 
-<header class="top-bar">
+<header class="top-bar {% if ceresConfig.header.fixedNavBar %}position-fixed{% endif %}">
     <div>
         <div class="container-max">
             <div class="row">
