--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -14,6 +14,8 @@
 {% set currencyFormat = config("Ceres.currency.format") %}
 {% set currencyFormatSelect = config("Ceres.currency.format_selection") %}
 
+{% set headerContainer = LayoutContainer.show("Ceres::Header") | trim %}
+{% if headerContainer is empty %}
 <header class="top-bar">
     <div>
         <div class="container-max">
@@ -190,3 +192,6 @@
         </shop-country-settings>
     </div>
 </div>
+{% else %}
+    {{ headerContainer | raw }}
+{% endif %}
