Update img-tag with alt- and title-tags

--- a/resources/views/Category/Item/Partials/CategoryListItem.twig
+++ b/resources/views/Category/Item/Partials/CategoryListItem.twig
@@ -27,6 +27,7 @@
                         template="#vue-category-image-carousel"
                         :image-urls-data="{{ item.data.images | json_encode() }} | itemImages('urlMiddle')"
                         alt-text="{{ ItemName.get(item.data | itemName, item.data.variation.bundleType) }}"
+                        title-text="{{ ItemName.get(item.data | itemName, item.data.variation.bundleType) }}"
                         item-url="{{ itemUrl }}"
                         :show-dots="{{ ceresConfig.item.categoryShowDots | json_encode }}"
                         :show-nav="{{ ceresConfig.item.categoryShowNav | json_encode }}"
@@ -35,7 +36,7 @@
 
                     <noscript>
                         <a href="{{ itemUrl }}">
-                            <img class="img-fluid" src="{{ image.urlMiddle }}">
+                            <img class="img-fluid" src="{{ image.urlMiddle }}" title="{{ ItemName.get(item.data | itemName, item.data.variation.bundleType) }}" alt="{{ ItemName.get(item.data | itemName, item.data.variation.bundleType) }}">
                         </a>
                     </noscript>
                 </div>
