--- a/resources/views/Checkout/Components/PaymentProviderSelect.twig
+++ b/resources/views/Checkout/Components/PaymentProviderSelect.twig
@@ -15,7 +15,7 @@
                     <div class="icon">
                         <div class="square-container">
                             <div class="square-inner center-xy">
-                              <img :alt="paymentProvider.name" :src="paymentProvider.icon">
+                              <img :src="paymentProvider.icon" :alt="paymentProvider.name" :title="paymentProvider.name" >
                             </div>
                         </div>
                     </div><!--
