--- a/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
@@ -5,7 +5,7 @@
 <script type="x/template" id="vue-address-input-group">
 
     <div>
-        <div v-if="localeToShow == 'DE' && addressType === '1'">
+        {# <div v-if="localeToShow == 'DE' && addressType === '1'">
             {% include "Ceres::Customer.Components.AddressInputGroup.Locale.BillingAddressInputGroupDE" %}
         </div>
 
@@ -19,6 +19,10 @@
 
         <div v-if="localeToShow == 'GB' && addressType === '2'">
             {% include "Ceres::Customer.Components.AddressInputGroup.Locale.DeliveryAddressInputGroupGB" %}
+        </div> #}
+
+        <div>
+            {% include "Ceres::Customer.Components.AddressInputGroup.Locale.DHLPackingStationAddressInputGroupDE" %}
         </div>
 
         <div class="col-xs-12 col-sm-4">
