UPDATE address input group using computed props

--- a/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
@@ -5,24 +5,20 @@
 <script type="x/template" id="vue-address-input-group">
 
     <div>
-        {# <div v-if="localeToShow == 'DE' && addressType === '1'">
+        <div v-if="isPickupStation || isPostOffice">
+            {% include "Ceres::Customer.Components.AddressInputGroup.Locale.DHLPackingStationAddressInputGroupDE" %}
+        </div>
+        <div v-else-if="localeToShow == 'DE' && addressType === '1'">
             {% include "Ceres::Customer.Components.AddressInputGroup.Locale.BillingAddressInputGroupDE" %}
         </div>
-
-        <div v-if="localeToShow == 'GB' && addressType === '1'">
+        <div v-else-if="localeToShow == 'GB' && addressType === '1'">
             {% include "Ceres::Customer.Components.AddressInputGroup.Locale.BillingAddressInputGroupGB" %}
         </div>
-
-        <div v-if="localeToShow == 'DE' && addressType === '2'">
+        <div v-else-if="localeToShow == 'DE' && addressType === '2'">
             {% include "Ceres::Customer.Components.AddressInputGroup.Locale.DeliveryAddressInputGroupDE" %}
         </div>
-
-        <div v-if="localeToShow == 'GB' && addressType === '2'">
+        <div v-else-if="localeToShow == 'GB' && addressType === '2'">
             {% include "Ceres::Customer.Components.AddressInputGroup.Locale.DeliveryAddressInputGroupGB" %}
-        </div> #}
-
-        <div>
-            {% include "Ceres::Customer.Components.AddressInputGroup.Locale.DHLPackingStationAddressInputGroupDE" %}
         </div>
 
         <div class="col-xs-12 col-sm-4">
