--- a/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
+++ b/resources/views/Customer/Components/AddressSelect/AddressSelect.twig
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="add-item">
-                    <button href="#" class="btn btn-primary btn-medium btn-only-icon-xs-down" v-if="isAddAddressEnabled" @click.prevent="showAddModal" :disabled="isBasketLoading">
+                    <button href="#" class="btn btn-primary btn-medium btn-only-icon-xs-down" v-if="isAddAddressEnabled" @click.prevent="showAddModal()" :disabled="isBasketLoading">
                         <i class="fa fa-plus-square" aria-hidden="true"></i>
                         <span>{{ trans("Ceres::Template.addressAddAddress") }}</span>
                     </button>
