ADD LinkListWidget - first version of a new widget for separate content

--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -7,3 +7,5 @@
 @import "Common/item-list-widget";
 @import "Common/title-bar-widget";
 @import "Common/text-widget";
+@import "Common/list-widget";
+@import "Common/link-list-widget";
