--- a/resources/views/Category/Macros/CategoryTree.twig
+++ b/resources/views/Category/Macros/CategoryTree.twig
@@ -1,22 +1,24 @@
-{% macro get_children(category, currentScopeUrl, level) %}
-    {% set megaMenuLevels = not config('Ceres.header.megamenu_levels') ? 1 : config('Ceres.header.megamenu_levels') %}
-    {% set maxitems = { "1": config('Ceres.header.megamenu_items_stage_1'), "2": config('Ceres.header.megamenu_items_stage_2') ,"3": config('Ceres.header.megamenu_items_stage_3')} %}
+{% macro get_children(category, currentScopeUrl, level, megaMenuLevels, maxItems) %}
+    {% set megaMenuLevels = megaMenuLevels | default(1) %}
+    {% set maxItems = maxItems | default({"1": 30, "2": 3, "3": 2}) %}
     {% import _self as childlist %}
     {% set counter = 0 %}
+    <!-- {{ megaMenuLevels | json_encode }} -->
+    <!-- {{ maxItems | json_encode }} -->
     {% if level < megaMenuLevels %}
-        {% for child in category.children if counter < maxitems[level] %}
+        {% for child in category.children if counter < maxItems[level] %}
             {% if (child.details | length > 0) %}
                 <li class="level{{ level }}">
                     {% set newScope = currentScopeUrl ~ "/" ~ child.details[0].nameUrl %}
                     <a href="{{ newScope }}{{ urls.trailingSlashSuffix }}" v-render-category="{ id: {{ child.id }}, type: '{{ child.type }}', scrollToTop: 600 }">{{ child.details[0].name }}</a>
                     {% if child.children %}
                         {% if level == 1 %}<ul>{% endif %}
-                        {{ childlist.get_children(child, newScope, level + 1) }}
+                        {{ childlist.get_children(child, newScope, level + 1, megaMenuLevels, maxItems) }}
                         {% if level == 1 %}</ul>{% endif %}
                     {% endif %}
                 </li>
                 {% set counter = counter + 1 %}
-                {% if counter == maxitems[level]%}
+                {% if counter == maxItems[level]%}
                     <li class="level{{ level }} bt-more"><a href="{{ currentScopeUrl }}" v-render-category="{ id: {{ category.id }}, type: '{{ category.type }}', scrollToTop: 600 }">{{ trans("Ceres::Template.itemShowMore") }}...</a></li>
                 {% endif %}
             {% endif %}
@@ -24,10 +26,10 @@
     {% endif %}
 {% endmacro %}
 
-{% macro get_nav_bar(categories, currentScopeUrl) %}
+{% macro get_nav_bar(categories, currentScopeUrl, megaMenuLevels, maxItemsPerStage) %}
     {% import _self as navbar %}
     {% set counter = 0 %}
-    {% set megaMenuLevels = not config('Ceres.header.megamenu_levels') ? 1 : config('Ceres.header.megamenu_levels') %}
+    {% set megaMenuLevels = megaMenuLevels | default(1) %}
 
     {% for category in categories %}
 
@@ -54,7 +56,7 @@
 
                     <ul data-level="1" id="navDropdown{{ counter }}" class="collapse">
                         {% set counter = counter + 1 %}
-                        {% if megaMenuLevels == "1" %}
+                        {% if megaMenuLevels == 1 %}
                             {% for child in category.children %}
                                 {% if child.details | length > 0 %}
                                     <li>
@@ -63,7 +65,7 @@
                                 {% endif %}
                             {% endfor %}
                         {% else %}
-                            {{ navbar.get_children(category, currentScopeUrl, 1) }}
+                            {{ navbar.get_children(category, currentScopeUrl, 1, megaMenuLevels, maxItemsPerStage) }}
                         {% endif %}
                     </ul>
                 </li>
