--- a/resources/views/Widgets/Header/NavigationWidget.twig
+++ b/resources/views/Widgets/Header/NavigationWidget.twig
@@ -1,19 +1,21 @@
-{% set companyLogo  = config("Ceres.header.company_logo") %}
-{% set lang         = services.sessionStorage.getLang() %}
-{% set showHeaderNavBar = config("Ceres.header.show_navbars") %}
-{% set companyName  = trans("Ceres::Template.headerCompanyName") %}
-{% set useMegaMenu  = config("Ceres.header.megamenu_levels") > 1 %}
+{% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
-<nav class="navbar{% if useMegaMenu %} megamenu{%endif%}">
+{% set navigationStyle      = widget.settings.navigationStyle.mobile %}
+{% set companyLogoUrl       = widget.settings.companyLogoUrl.mobile %}
+{% set megaMenuLevels       = widget.settings.megaMenuLevels.mobile %}
+{% set megaMenuMaxItems1    = widget.settings.megaMenuMaxItems.stage1.mobile %}
+{% set megaMenuMaxItems2    = widget.settings.megaMenuMaxItems.stage2.mobile %}
+{% set megaMenuMaxItems3    = widget.settings.megaMenuMaxItems.stage3.mobile %}
+{% set megaMenuMaxItems     = { "1": megaMenuMaxItems1, "2": megaMenuMaxItems2, "3": megaMenuMaxItems3 } %}
+
+{{ Twig.import("Tree", "Ceres::Category.Macros.CategoryTree") }}
+
+<nav class="navbar{% if navigationStyle == 'megaMenu' %} megamenu{%endif%}">
     <div class="container-max">
         <div class="row">
-            <div class="brand-wrapper" {% if showHeaderNavBar == "side" %}style="position: relative"{% endif %}>
-                <a class="navbar-brand pull-lg-left" href="{{ homepageURL }}">
-                    {% if ('http' in companyLogo) or ('layout/' in companyLogo) %}
-                        <img alt="{{ companyName }}" src="{{ companyLogo }}" class="img-fluid" crossorigin="anonymous" />
-                    {% else %}
-                        <img alt="{{ companyName }}" src="{{ plugin_path('Ceres') }}/{{ companyLogo }}" class="img-fluid" crossorigin="anonymous" />
-                    {% endif %}
+            <div class="brand-wrapper">
+                <a class="navbar-brand pull-lg-left" href="{{ Twig.print('urls.home') }}">
+                    <img alt="{{ Twig.print('trans("Ceres::Template.headerCompanyName")') }}" src="{{ companyLogoUrl }}" class="img-fluid" crossorigin="anonymous" />
                 </a>
 
                 <button id="btnMainMenuToggler" v-open-mobile-navigation class="navbar-toggler hidden-lg-up" type="button">
@@ -25,10 +27,11 @@
                 <ul class="breadcrumb">
                     <li class="btnClose"></li>
                 </ul>
-                {% if showHeaderNavBar == "top" or showHeaderNavBar == "both" or not services.template.isCategory() %}
-                    {# includeCached('Ceres::PageDesign.Partials.Header.NavigationList.twig') #}
-                    {% include "Ceres::PageDesign.Partials.Header.NavigationList" %}
-                {% endif %}
+
+
+                <ul class="mainmenu pull-lg-right">
+                    {{ Twig.print(Twig.call("Tree.get_nav_bar", [Twig.var("categories"), "", megaMenuLevels, megaMenuMaxItems])) }}
+                </ul>
             </div>
 
         </div>
