--- a/resources/scss/ceres/widgets/Helper/_base-widget.scss
+++ b/resources/scss/ceres/widgets/Helper/_base-widget.scss
@@ -11,6 +11,30 @@
             margin-bottom: 0;
         }
     }
+
+    &.widget-placeholder {
+        position: relative;
+        border: 3px dashed #dadae3;
+        border-radius: 3px;
+        height: 75px;
+        line-height: 75px;
+        vertical-align: middle;
+        text-align: center;
+        color: #dadae3;
+        font-size: 20px;
+        font-style: italic;
+
+        &:after {
+            content: 'Placeholder';
+            text-align: center;
+            display: block;
+            font-size: 20px;
+            top: 0;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
 @include media-breakpoint-down(sm)
